# swiftcontrol

./: .gitignore  .gitmodules  CHANGELOG.md  INSTRUCTIONS_LOCAL.md  INSTRUCTIONS_MYWHOOSH_LINK.md  INSTRUCTIONS_ROUVY.md  LICENSE  README.md  TROUBLESHOOTING.md  pubspec.yaml  pubspec_overrides_ci.yaml
.github/workflows/: build.yml  patch.yml  web.yml
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios_receipt/: pubspec.yaml
ios_receipt/ios/Classes/: IosReceiptPlugin.swift
ios_receipt/lib/: ios_receipt.dart  ios_receipt_method_channel.dart  ios_receipt_platform_interface.dart
ios_receipt/macos/: ios_receipt.podspec
ios_receipt/macos/Classes/: IosReceiptPlugin.swift
lib/: main.dart
lib/bluetooth/: connection.dart  remote_keyboard_pairing.dart  remote_pairing.dart
lib/bluetooth/devices/: base_device.dart  bluetooth_device.dart  trainer_connection.dart
lib/bluetooth/devices/elite/: elite_square.dart  elite_sterzo.dart
lib/bluetooth/devices/gamepad/: gamepad_device.dart
lib/bluetooth/messages/: notification.dart
lib/pages/: button_edit.dart  button_simulator.dart  device.dart  markdown.dart  navigation.dart  onboarding.dart  touch_area.dart  trainer.dart  unlock.dart
lib/utils/: core.dart  i18n_extension.dart
lib/utils/actions/: android.dart  base_actions.dart  desktop.dart  remote.dart
lib/utils/iap/: iap_manager.dart  iap_service.dart  revenuecat_service.dart  windows_iap_service.dart
lib/utils/keymap/: buttons.dart  keymap.dart  manager.dart
lib/utils/requirements/: android.dart  multi.dart  platform.dart
lib/utils/settings/: settings.dart
lib/widgets/: accessibility_disclosure_dialog.dart  custom_keymap_selector.dart  iap_status_widget.dart  ignored_devices_dialog.dart  keyboard_pair_widget.dart  keymap_explanation.dart  logviewer.dart  menu.dart  mouse_pair_widget.dart  scan.dart  testbed.dart  title.dart
lib/widgets/apps/: mywhoosh_link_tile.dart  openbikecontrol_ble_tile.dart  openbikecontrol_mdns_tile.dart  zwift_mdns_tile.dart  zwift_tile.dart
lib/widgets/ui/: colored_title.dart  connection_method.dart  device_info.dart  gradient_text.dart  help_button.dart  toast.dart  warning.dart  wifi_animation.dart
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  Release.entitlements
prop_public/: LICENSE  README.md  pubspec.yaml
prop_public/lib/: prop.dart
prop_public/lib/emulators/: click_emulator.dart  ftms_emulator.dart  prefs.dart  shared.dart
prop_public/lib/protocol/: zp.pb.dart  zp.pbenum.dart  zwift.pb.dart
test/: bluetooth_device_detection.dart  button_simulator_hotkeys_test.dart  custom_frame.dart  custom_profile_test.dart  cycplus_bc2_test.dart  gyroscope_steering_test.dart  long_press_test.dart  modifier_keys_test.dart  screenshot_test.dart  shimano_di2_test.dart  steering_estimator_test.dart  thinkrider_vs200_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
windows_iap/: README.md  pubspec.yaml
windows_iap/lib/: utils.dart  windows_iap.dart  windows_iap_method_channel.dart  windows_iap_platform_interface.dart
windows_iap/lib/models/: product.dart  store_license.dart
windows_iap/test/: windows_iap_method_channel_test.dart  windows_iap_test.dart
windows_iap/windows/: CMakeLists.txt  windows_iap_plugin.cpp  windows_iap_plugin.h  windows_iap_plugin_c_api.cpp
windows_iap/windows/include/windows_iap/: windows_iap_plugin_c_api.h
(+31 files in other folders)
